--- a/html/package.json
+++ b/html/package.json
@@ -2,6 +2,7 @@
   "name": "html",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:9000",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -17,7 +18,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "mock-api": "node ./mock-api.js",
+    "dev": "run-p start mock-api"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -33,5 +36,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "connect-api-mocker": "^1.7.0",
+    "express": "^4.17.1",
+    "npm-run-all": "^4.1.5"
   }
 }
